Fix: Prøver ikke lage vurderRefusjonDto hvis grunnbeløp er null da dette er påkrevd for å kunne utlede rett dto. Retter noen sonar issues